Changes mostly related with the support of external nodes (importing nodes with links to external nodes, add link to external nodes in the workspace, submit nodes containing links to external nodes). refs #3423